# swarm-volume-registry

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  RELEASING.md
.github/workflows/: claude.yml  publish-python.yml  test.yml
contracts/: foundry.toml  remappings.txt
contracts/script/: DeployVolumeRegistry.s.sol
contracts/src/: VolumeRegistry.sol
contracts/test/: README.md  (+10 more)
docs/: DESIGN.md  usage.md  volume-registry.excalidraw
python/: .gitignore  CLAUDE.md  pyproject.toml
python/docs/: ARCHITECTURE.md  CLIENT.md  README.md  SCHEMA.md  TESTING.md  VERSIONING.md
python/docs/adr/: 0001-three-measures.md  0002-finalized-only-indexer.md  0003-web3-isolation.md  0004-single-projection.md  0005-event-log-partition.md  0006-jsonlines-cache.md  0007-static-artifact-delivery.md  0008-version-axes.md  0009-client-side-folding.md  0010-extensional-contract-versions.md  0011-derived-deployment-registry.md  README.md
python/docs/data-model/: README.md  deployment-registry.md  event-log.md  projection.md
python/src/ethswarm_volumes/: __init__.py  acquire.py  capacity.py  cli.py  decode.py  deployments.json  fiat.py  model.py  node.py  prices.py  project.py  registry.py  serialize.py  store.py  view.py
python/tests/: README.md  conftest.py  harness.py  test_cli.py  test_decoder.py  test_node.py  test_pipeline.py  test_project_units.py  test_registry.py  test_serialize.py  test_view.py
python/tests/fixtures/v1/: PostageStamp.json  PriceOracle.json  TestToken.json  VolumeRegistry.json  provenance.json
scripts/: derive_deployments.py  vendor_fixtures.py
(+6 files in other folders)
