[project]
name = "ethswarm-volumes"
version = "0.0.0"
description = "Data API and CLI for Swarm VolumeRegistry deployments"
requires-python = ">=3.10"
dependencies = [
    "hexbytes>=1.3.1",
    "web3>=7.16.0",
]

[project.scripts]
ethswarm-volumes = "ethswarm_volumes.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ethswarm_volumes"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
